# resume-mux

./: Cargo.toml  README.md
docs/plans/: 2026-03-05-agent-resume-design.md  2026-03-05-agent-resume-implementation.md
src/: main.rs  resume.rs  search.rs
src/adapters/: claude.rs  codex.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
